--- a/Day-10/index.html
+++ b/Day-10/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-    
-    <h1 id="title"></h1>
-    <button id="btn">zoom</button>
+    <div class="container">
+        <h1>Add items to the list</h1>
+        <button id="add">ADD ITEM</button>
+        <ul id="list">
 
-    <script src="script.js"></script>
+        </ul>
+
+    </div>
 </body>
 </html>
